color contrast fix

--- a/assets/styles/src/modules/_widget_link.scss
+++ b/assets/styles/src/modules/_widget_link.scss
@@ -17,7 +17,7 @@
 			display: block;
 			text-transform: uppercase;
 			letter-spacing: 0.1em;
-			color: $dark-widget;
+			color: $text;
 			text-decoration: none;
 			@include font-size(11);
 			@include rem('padding', 1);
@@ -25,6 +25,9 @@
 			&:hover {
 				color: #fff !important;
 				background: $accent;
+                i {
+                    color: #fff !important;
+                }
 			}
 			
 			i {
